--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                     <h3 class="font-bold text-white text-2xl mb-2">🔒 관계 유지 <span class="text-yellow-400">시크릿 가이드</span></h3>
                                     <p class="text-slate-400 text-sm mb-8">대화법, 데이트 추천, 절대 금기사항 확인하기</p>
                                     <button id="coupang-trigger-btn" class="w-full md:w-auto px-10 py-4 text-white font-bold rounded-full shadow-lg transform transition hover:scale-105 coupang-btn-gradient flex items-center justify-center gap-3 mx-auto text-lg">
-                                        <span>잠금 해제하고 확인하기</span> <i class="fas fa-unlock-alt"></i>
+                                        <span>쿠팡 쇼핑 10초만 하고 확인하기</span> <i class="fas fa-unlock-alt"></i>
                                     </button>
                                 </div>
                             </div>
