--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 window.scrollTo(0, 0);
 
                 document.getElementById('coupang-trigger-btn').addEventListener('click', () => {
-                    window.open('https://www.coupang.com', '_blank');
+                    window.open('https://link.coupang.com/a/dcbQl7', '_blank');
                     document.getElementById('lock-screen').classList.add('hidden');
                     const unlocked = document.getElementById('unlocked-content');
                     unlocked.classList.remove('hidden');
