--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTI 16x16 심층 궁합</title>
+    <title>MBTI로 보는 궁합</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -32,9 +32,9 @@
 
         <div id="input-page" class="flex flex-col justify-center min-h-[85vh] fade-in">
             <div class="text-center mb-12">
-                <span class="inline-block bg-white border border-slate-200 text-slate-500 text-xs font-bold px-4 py-1.5 rounded-full mb-4 shadow-sm tracking-wide">16x16 Full Matrix Analysis</span>
-                <h1 class="text-4xl md:text-5xl font-extrabold text-slate-900 mb-4 leading-tight">16가지 유형의 <br class="md:hidden">모든 경우의 수 분석 🧩</h1>
-                <p class="text-slate-500 text-base md:text-lg">같은 유형은 없습니다. 256가지의 고유한 관계 이야기</p>
+                <span class="inline-block bg-white border border-slate-200 text-slate-500 text-xs font-bold px-4 py-1.5 rounded-full mb-4 shadow-sm tracking-wide">MBTI로 알아보는 128가지 조합에 대한 이야기</span>
+                <h1 class="text-4xl md:text-5xl font-extrabold text-slate-900 mb-4 leading-tight">MBTI로 알아보는 <br class="md:hidden">우리가 싸우는 이유🧩</h1>
+                <p class="text-slate-500 text-base md:text-lg">나와 연인의 MBTI를 입력하면 AI가 분석한 결과가 나와요!</p>
             </div>
 
             <div class="bg-white rounded-[2rem] p-8 md:p-12 shadow-2xl shadow-slate-200/60 max-w-3xl mx-auto w-full border border-white">
