--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       gtag('js', new Date());
       gtag('config', 'G-33VJ9T8RW5');
     </script>
+    <meta property="og:type" content="website">
+<meta property="og:title" content="연인과 나의 MBTI 궁합 & 안 싸우는 꿀팁 💖">
+<meta property="og:description" content="우리 커플은 왜 싸울까? 서로의 속마음부터 200% 리얼 연애 처방전까지! 16가지 유형 완벽 분석 보고서">
+<meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/2074/2074844.png">
+<meta property="og:url" content="https://aimbti.xyz">
 </head>
 <body class="text-slate-800 min-h-screen">
 
