--- a/some/index.html
+++ b/some/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://aimbti.xyz/some">
+    <meta property="og:title" content="🔒 그 사람의 마음을 여는 열쇠 | MBTI 썸 공략 가이드">
+    <meta property="og:description" content="내 성향은 살리고 상대방 취향은 저격하는 200% 맞춤형 플러팅 전략! 카톡 말투부터 절대 금기어까지 시크릿 비법 공개 💘">
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/9355/9355325.png">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💘</text></svg>">
     <title>썸남썸녀 공략 가이드 | 그 사람의 마음을 여는 열쇠</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -14,11 +20,7 @@
       gtag('js', new Date());
       gtag('config', 'G-33VJ9T8RW5');
     </script>
-    <meta property="og:type" content="website">
-<meta property="og:url" content="https://aimbti.xyz/some">
-<meta property="og:title" content="🔒 그 사람의 마음을 여는 열쇠 | MBTI 썸 공략 가이드">
-<meta property="og:description" content="내 성향은 살리고 상대방 취향은 저격하는 200% 맞춤형 플러팅 전략! 카톡 말투부터 절대 금기어까지 시크릿 비법 공개 💘">
-<meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/9355/9355325.png">
+    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Pretendard:wght@300;400;600;800&display=swap');
         body { font-family: 'Pretendard', sans-serif; background-color: #f3e8ff; }
