--- a/some/index.html
+++ b/some/index.html
@@ -35,7 +35,6 @@
         .shake { animation: shake 0.4s cubic-bezier(.36,.07,.19,.97) both; border-color: #ef4444 !important; }
         @keyframes shake { 10%, 90% { transform: translate3d(-1px, 0, 0); } 20%, 80% { transform: translate3d(2px, 0, 0); } 30%, 50%, 70% { transform: translate3d(-4px, 0, 0); } 40%, 60% { transform: translate3d(4px, 0, 0); } }
         
-        /* 포인트 박스 스타일 */
         .strategy-box { border-left-width: 4px; transition: transform 0.2s; }
         .strategy-box:hover { transform: translateY(-2px); }
     </style>
@@ -99,31 +98,77 @@
             const dataList = document.getElementById('mbti-list');
             validMbtiList.forEach(t => { let opt = document.createElement('option'); opt.value = t; dataList.appendChild(opt); });
 
-            // 1. [상대방 분석] 상세 데이터 (2배 보강)
-            const targetAnalysis = {
-                "ISTJ": { type: "신중한 원칙주의자", like: "예측 가능한 일정과 약속 시간 10분 전 도착을 사랑합니다. 흐트러짐 없는 단정한 옷차림과 본인의 말에 책임을 지는 태도에서 깊은 신뢰를 느낍니다. 빈말이나 아부보다는 솔직하고 담백한 화법을 선호합니다.", dislike: "당일에 갑자기 '지금 나와'라고 하는 것, 시끄럽고 정신없는 장소, 허세를 부리거나 앞뒤가 다른 행동, 기본적인 예의를 지키지 않는 것을 극도로 싫어합니다.", tip: "애매한 표현은 독입니다. '시간 될 때 보자'가 아니라 '이번 주 토요일 2시에 OO카페에서 보자'라고 구체적인 플랜을 제시하세요." },
-                "ISFJ": { type: "섬세한 배려왕", like: "내가 지나가듯 했던 사소한 말을 기억해 줄 때 큰 감동을 받습니다. 식당 종업원에게 친절한 모습, 정숙하고 차분한 데이트 분위기, 그리고 헤어질 때 진심 어린 '고마워'라는 인사가 필수입니다.", dislike: "강한 자기주장으로 몰아붙이는 것, 연락이 묘연해지는 것, 다른 사람을 무시하거나 무례하게 구는 행동, 갈등 상황을 만드는 것을 견디기 힘들어합니다.", tip: "급하게 다가가면 문을 닫습니다. 천천히 스며드세요. 당신이 '안전하고 따뜻한 사람'이라는 확신이 들 때까지 기다려주는 인내심이 필요합니다." },
-                "INFJ": { type: "속 깊은 철학자", like: "가벼운 농담보다는 둘만의 깊은 대화(인생관, 가치관)를 나누는 것을 좋아합니다. 사람이 붐비지 않는 조용한 곳, 나의 독특한 생각까지 존중해주는 태도, 거짓 없는 진정성에 마음을 엽니다.", dislike: "의미 없는 가벼운 농담만 계속하는 것, 거짓말이나 위선적인 태도, 훅 들어오는 과도한 스킨십, 시끄러운 클럽이나 파티 분위기는 에너지를 방전시킵니다.", tip: "당신의 화려한 모습보다는 내면의 생각에 관심을 보여주세요. '너의 생각이 궁금해', '너는 어떻게 느껴?'라는 질문이 마법의 열쇠입니다." },
-                "INTJ": { type: "지적인 야망가", like: "논리적이고 건설적인 대화, 배울 점이 있는 유능한 사람, 자신의 비전과 목표를 지지해주는 태도, 시간 낭비 없는 효율적인 데이트 코스를 선호합니다.", dislike: "징징거리거나 감정에만 호소하는 대화, 멍청하거나 무능력해 보이는 행동, 계획 없이 시간을 허비하는 것, 뻔한 칭찬이나 아부를 질색합니다.", tip: "당신이 자신의 분야에서 얼마나 프로페셔널한지 어필하세요. 감정적인 위로보다는 지적인 토론을 나눌 때 '이 사람 섹시하다'고 느낍니다." },
-                "ISTP": { type: "시크한 마이웨이", like: "혼자만의 시간을 확실히 존중해주는 쿨함, 이것저것 간섭하지 않는 태도, 함께 몸을 움직이거나 취미를 공유하는 활동, 빙빙 돌리지 않는 직설적이고 깔끔한 용건.", dislike: "집착하고 구속하려는 모든 시도, 감정적인 드라마를 찍으려 하는 것, 오글거리는 멘트나 과한 애정 표현, 답장을 닥달하는 행위.", tip: "고양이 다루듯 하세요. 다가오면 놀아주고, 멀어지면 놔두세요. 너무 들이대면 도망가지만, 무심한 듯 챙겨주면 호기심을 갖습니다." },
-                "ISFP": { type: "감성적인 예술가", like: "감각적인 인테리어의 카페나 전시회, 섬세하게 챙겨주는 매너, 부드럽고 다정하게 말하는 목소리, 나의 패션이나 취향을 구체적으로 칭찬해주는 것.", dislike: "결정을 빨리 하라고 강요하는 것, 목소리 큰 사람, 싸움이나 갈등 상황, 나의 취향이나 가치관을 비판적으로 지적하는 것.", tip: "리드는 당신이 하되, 강요는 하지 마세요. '이거 하자!' 대신 '이거 어때? 너 좋은 대로 하자'라고 부드럽게 선택권을 넘겨주는 게 포인트입니다." },
-                "INFP": { type: "낭만적인 몽상가", like: "나의 감정에 깊이 공감해주고 리액션해주는 것, 독특한 나만의 취향을 존중해주는 태도, 영화 같은 낭만적인 분위기, 진심이 담긴 예쁜 말과 편지.", dislike: "차가운 팩트 폭격으로 상처 주는 것, 내 말을 무시하거나 건성으로 듣는 태도, 속물적인 대화(돈, 현실 얘기만 하는 것), 전통적인 가치관 강요.", tip: "해결책을 주려 하지 말고 무조건적인 내 편이 되어주세요. 감수성을 자극하는 작은 선물이나 손편지가 명품 가방보다 효과적입니다." },
-                "INTP": { type: "호기심 많은 괴짜", like: "나의 마이너한 관심 분야에 대해 흥미롭게 들어주는 것, 멍 때리는 시간을 방해하지 않는 것, 엉뚱한 상상을 함께 나누는 것, 지적인 자극을 주는 대화.", dislike: "뻔한 스몰토크(날씨, 밥 얘기)만 반복하는 것, 감정적인 위로를 강요하는 것, 논리 없이 우기는 태도, 사생활을 꼬치꼬치 캐묻는 간섭.", tip: "그 사람의 관심사에 대해 질문을 던지세요. 평소에 조용하던 사람이 신나서 떠들기 시작하면 이미 당신에게 호감을 느끼고 있는 겁니다." },
-                "ESTP": { type: "화끈한 직진러", like: "스릴 넘치는 액티비티나 맛집 탐방, 쿨하고 뒤끝 없는 성격, 돌려 말하지 않는 직설적인 호감 표현, 함께 있을 때 끊임없이 웃게 해주는 유머 감각.", dislike: "답답하게 구는 것, 빙빙 돌려 말하며 눈치 보게 하는 것, 진지하고 무거운 분위기 잡는 것, 나를 구속하거나 통제하려는 시도.", tip: "밀당은 시간 낭비입니다. 같이 있으면 세상에서 제일 재밌고 신나는 사람이라는 인식을 심어주세요. 고민할 시간에 일단 지르세요!" },
-                "ESFP": { type: "주인공 본능 연예인", like: "나에게 쏟아지는 관심과 애정, 깜짝 서프라이즈 이벤트, 나의 말에 대한 크고 확실한 리액션, 핫플레이스나 힙한 장소 데이트.", dislike: "침묵과 정적, 진지한 설교나 훈계, 집에만 있는 지루한 데이트, 나를 무시하거나 투명 인간 취급하는 것.", tip: "함께 텐션을 올리세요! '너랑 있으니까 진짜 재밌다', '네가 최고야'라는 말을 아끼지 마세요. 즐거움이 곧 사랑입니다." },
-                "ENFP": { type: "사랑둥이 댕댕이", like: "우쭈쭈 해주며 칭찬 감옥에 가두기, 나의 엉뚱한 말에도 맞장구쳐주는 태도, 갑자기 떠나는 즉흥 여행, 끊임없는 애정 표현과 스킨십.", dislike: "무관심, 반복되는 지루한 일상과 데이트, 엄격한 규칙이나 규율 강요, 혼자 방치해 두는 것.", tip: "사소한 변화(머리스타일, 옷)도 기가 막히게 알아채고 칭찬해주세요. 당신의 관심이 곧 사랑의 척도라고 생각합니다." },
-                "ENTP": { type: "매력적인 논쟁가", like: "말싸움(토론)을 즐겁게 받아주는 티키타카, 끊임없이 새로운 아이디어 제안, 나를 인정하고 치켜세워 주는 것, 쿨하고 독립적인 태도.", dislike: "권위적으로 찍어 누르려는 태도, 뻔하고 지루한 칭찬, 나를 통제하거나 가르치려 드는 시도, 감정적으로 징징거리는 것.", tip: "논쟁을 피하지 말고 즐기세요. 지적으로 대등하거나 배울 점이 있는 상대라고 느낄 때 강렬한 끌림을 느낍니다." },
-                "ESTJ": { type: "확실한 리더형", like: "자신의 일에 몰입하는 능력 있는 모습, 시간 약속을 칼같이 지키는 태도, 호불호가 확실한 표현, 체계적이고 효율적인 데이트.", dislike: "우유부단하게 결정 못 하는 모습, 게으르고 나태한 태도, 징징거리며 감정 쓰레기통 취급하는 것, 약속을 어기는 것.", tip: "감정보다는 이성에 호소하세요. 당신이 배울 점이 있고 성실하며, 미래를 함께 그릴 수 있는 든든한 사람이라는 걸 보여주세요." },
-                "ESFJ": { type: "다정한 인싸", like: "고맙다는 표현을 자주 하는 것, 내 친구나 가족까지 챙겨주는 세심함, 빠른 답장과 활발한 리액션, 계획적인 데이트.", dislike: "차가운 반응이나 읽씹, 비판적인 태도나 지적, 내가 베푼 호의를 당연하게 여기는 것, 예의 없는 행동.", tip: "그 사람이 베푸는 친절에 크게 감동하고 표현하세요. '너 같은 사람 처음이야', '진짜 고마워'라는 말이 특효약입니다." },
-                "ENFJ": { type: "열정적인 코치", like: "나의 꿈과 비전을 진심으로 응원해주는 것, 먼저 다가와서 챙겨주는 따뜻함, 긍정적이고 희망찬 대화, 열정적인 리액션.", dislike: "이기적인 행동이나 계산적인 태도, 사회적 약자에 대한 무례함, 고마워할 줄 모르는 태도, 비관적인 말.", tip: "그 사람의 선한 영향력을 칭찬하세요. '너 덕분에 내가 더 좋은 사람이 된 것 같아'라는 말은 최고의 고백입니다." },
-                "ENTJ": { type: "카리스마 대장", like: "도전적이고 야망 있는 모습, 끊임없이 자기계발하는 사람, 빙빙 돌리지 않는 직설적이고 솔직한 화법, 일 잘하는 프로페셔널함.", dislike: "감성팔이하며 의존하려는 모습, 무능력하고 게으른 태도, 시간 낭비하는 무의미한 대화, 주관 없이 휩쓸리는 모습.", tip: "주눅 들지 말고 당당하게 대하세요. 자신의 일에 몰입하고 성취해내는 멋진 모습을 보여줄 때 반하게 됩니다." }
+            // 1. [상대방 분석] 상세 데이터 (16개 유형 * 2가지 버전 = 총 32개 페르소나)
+            const mbtiData = {
+                "ISTJ": [
+                    { type: "신중한 계획가형", like: "오차 없는 시간 약속, 깔끔하게 정돈된 외모, 예측 가능한 일정", dislike: "갑작스러운 번개 만남, 시끄럽고 무질서한 곳, 허세 부리는 말투", tip: "애매하게 '언제 밥 한번 먹자'는 말은 독입니다. '이번 주 토요일 6시에 강남역 3번 출구'처럼 구체적으로 제안하세요." },
+                    { type: "묵직한 원칙주의자형", like: "자신의 말에 책임을 지는 태도, 맡은 일에 최선을 다하는 모습", dislike: "약속을 쉽게 어기는 것, 감정적으로 징징거리는 것, 예의 없는 행동", tip: "가벼운 칭찬보다는 그 사람의 성실함과 능력에 대한 '인정'이 훨씬 강력하게 먹힙니다." }
+                ],
+                "ISFJ": [
+                    { type: "섬세한 배려왕형", like: "지나가듯 했던 사소한 말 기억해주기, 식당 직원에게 친절한 모습", dislike: "강한 자기주장으로 몰아붙이는 것, 무례하고 거친 언행", tip: "당신이 안전하고 따뜻한 사람이라는 확신이 들 때까지 기다려주세요. 급발진은 절대 금물입니다." },
+                    { type: "가정적인 평화주의자형", like: "안정적이고 차분한 데이트, 진심이 담긴 감사 인사와 손편지", dislike: "갈등 상황을 만드는 것, 연락이 잘 안 되는 것, 불안정한 태도", tip: "화려한 이벤트보다 소소한 일상을 공유하며 '나랑 있으면 편안해'라는 느낌을 주세요." }
+                ],
+                "INFJ": [
+                    { type: "속 깊은 철학자형", like: "둘만의 깊은 대화(가치관, 인생), 조용한 곳, 진정성 있는 눈빛", dislike: "가벼운 농담 따먹기만 하는 것, 거짓말, 시끄러운 파티", tip: "당신의 화려한 겉모습보다 내면에 관심을 가져주세요. '너는 어떻게 생각해?'라고 깊게 물어봐 주세요." },
+                    { type: "신비로운 예언가형", like: "나의 도덕적 신념을 지지해주는 사람, 예의 바르고 배려 깊은 태도", dislike: "선 넘는 장난, 남을 깎아내리는 뒷담화, 훅 들어오는 스킨십", tip: "천천히 스며들어야 합니다. 그 사람의 선을 존중하면서 신뢰를 쌓는 것이 최우선입니다." }
+                ],
+                "INTJ": [
+                    { type: "지적인 야망가형", like: "논리적이고 건설적인 대화, 배울 점이 있는 유능한 모습", dislike: "감정에만 호소하는 징징거림, 멍청하거나 무계획적인 행동", tip: "당신이 꽤 스마트하고 비전 있는 사람이라는 걸 은연중에 어필하세요. 뇌가 섹시한 사람을 좋아합니다." },
+                    { type: "차가운 전략가형", like: "효율적인 데이트 코스, 내 목표를 지지해주는 든든한 파트너", dislike: "시간 낭비하는 것, 뻔한 아부나 빈말, 돌려 말하는 화법", tip: "밀당하지 마세요. 호감이 있다면 직설적이고 논리적으로 제안하는 것이 가장 효과적입니다." }
+                ],
+                "ISTP": [
+                    { type: "시크한 마이웨이형", like: "혼자만의 시간 존중, 쿨한 태도, 용건만 간단히 하는 깔끔함", dislike: "질척거리는 집착, 감정적인 드라마 찍기, 답장 재촉", tip: "고양이 다루듯 하세요. 다가오면 놀아주고, 멀어지면 놔두세요. 쫓아가면 도망갑니다." },
+                    { type: "만능 해결사형", like: "함께 즐기는 액티비티나 취미 공유, 기계를 잘 다루거나 센스 있는 모습", dislike: "말만 앞서고 행동하지 않는 것, 비효율적인 상황, 꼰대질", tip: "말보다는 행동으로 보여주세요. 같이 게임을 하거나 운동을 하는 등 몸을 움직이는 데이트가 좋습니다." }
+                ],
+                "ISFP": [
+                    { type: "감성적인 예술가형", like: "감각적인 인테리어의 장소, 세심하게 챙겨주는 매너, 예쁜 칭찬", dislike: "결정을 강요하는 것, 목소리 크고 거친 사람, 비판적인 지적", tip: "리드는 당신이 하되 강요는 마세요. '이거 어때?'라고 부드럽게 물어봐 주는 게 포인트입니다." },
+                    { type: "평화로운 눕방러형", like: "편안한 분위기, 맛있는 음식, 나의 취향을 존중해주는 태도", dislike: "싸움이나 갈등 상황, 빡빡한 스케줄, 나를 가르치려 드는 것", tip: "그 사람의 패션이나 취향을 구체적으로 칭찬해주세요. 편안함 속에 설렘을 한 스푼 넣어야 합니다." }
+                ],
+                "INFP": [
+                    { type: "낭만적인 몽상가형", like: "나의 감정에 깊이 공감해주는 것, 낭만적인 분위기, 예쁜 말과 편지", dislike: "차가운 팩트 폭격, 내 말을 무시하는 태도, 속물적인 대화", tip: "현실적인 조언보다는 무조건적인 내 편이 되어주세요. 작은 선물이나 손편지에 크게 감동합니다." },
+                    { type: "수줍은 팅커벨형", like: "나의 독특한 취향을 존중해주는 것, 조용히 챙겨주는 세심함", dislike: "전통적인 가치관 강요, 강압적인 분위기, 공개적인 망신", tip: "그 사람의 상상력과 꿈을 응원해주세요. '너는 정말 특별한 사람이야'라는 느낌을 줘야 합니다." }
+                ],
+                "INTP": [
+                    { type: "호기심 많은 괴짜형", like: "나의 마이너한 관심사를 흥미롭게 들어주는 것, 지적인 자극", dislike: "뻔한 스몰토크(날씨, 밥), 논리 없는 주장, 감정 강요", tip: "그 사람이 꽂혀있는 주제에 대해 질문하세요. 신나서 떠들기 시작하면 이미 반은 넘어온 겁니다." },
+                    { type: "게으른 천재형", like: "멍 때리는 시간 존중, 효율적인 대화, 엉뚱한 유머 코드", dislike: "사생활을 꼬치꼬치 캐묻는 것, 멍청한 행동, 집착", tip: "너무 자주 연락하거나 만나자고 조르지 마세요. 각자의 시간을 즐기는 쿨한 관계를 지향합니다." }
+                ],
+                "ESTP": [
+                    { type: "화끈한 직진러형", like: "스릴 넘치는 액티비티, 돌려 말하지 않는 직설적인 호감 표현", dislike: "답답하게 구는 것, 빙빙 돌려 말하기, 지나치게 진지한 분위기", tip: "밀당은 시간 낭비입니다. 같이 있으면 세상에서 제일 재밌는 사람이라는 걸 보여주세요." },
+                    { type: "쿨한 승부사형", like: "맛집 탐방, 내기나 게임, 센스 있는 유머 감각, 힙한 스타일", dislike: "구속하거나 통제하려는 시도, 징징거리는 태도, 우유부단함", tip: "고민할 시간에 일단 지르세요! '지금 나와, 드라이브 가자' 같은 박력 있는 제안이 먹힙니다." }
+                ],
+                "ESFP": [
+                    { type: "주인공 본능 연예인형", like: "나에게 쏟아지는 관심, 서프라이즈 이벤트, 무한 리액션", dislike: "침묵과 정적, 나를 투명 인간 취급하는 것, 지루한 설교", tip: "텐션을 올리세요! '너랑 있으니까 진짜 재밌다', '오늘 옷 너무 예쁘다' 칭찬 폭격이 필요합니다." },
+                    { type: "자유로운 영혼형", like: "핫플레이스 데이트, 즉흥적인 만남, 즐겁고 긍정적인 바이브", dislike: "집에만 있는 데이트, 심각하고 우울한 얘기, 구속하는 것", tip: "심각한 얘기는 나중에 하세요. 일단 만나서 즐겁게 놀고 웃게 만드는 게 우선입니다." }
+                ],
+                "ENFP": [
+                    { type: "사랑둥이 댕댕이형", like: "우쭈쭈 해주기, 나의 엉뚱한 말에도 맞장구쳐주는 태도", dislike: "무관심, 차가운 반응, 엄격한 규칙이나 규율 강요", tip: "사소한 변화도 알아봐 주고 칭찬해주세요. 당신의 관심이 곧 사랑의 척도라고 생각합니다." },
+                    { type: "열정적인 스파크형", like: "갑자기 떠나는 여행, 끊임없는 애정 표현, 새로운 경험", dislike: "반복되는 지루한 일상, 혼자 방치해 두는 것, 현실적인 잔소리", tip: "그 사람의 꿈과 열정을 응원해주세요. 현실적인 조언보다는 '너라면 할 수 있어!'가 필요합니다." }
+                ],
+                "ENTP": [
+                    { type: "매력적인 논쟁가형", like: "말싸움(토론)을 즐겁게 받아주는 티키타카, 새로운 아이디어", dislike: "권위적으로 찍어 누르려는 태도, 무조건적인 복종 강요", tip: "논쟁을 피하지 말고 즐기세요. 지적으로 대등한 상대라고 느낄 때 강렬한 끌림을 느낍니다." },
+                    { type: "유쾌한 발명가형", like: "나를 인정하고 치켜세워 주는 것, 쿨하고 독립적인 태도", dislike: "뻔하고 지루한 칭찬, 감정적으로 매달리는 것, 통제", tip: "함께 있으면 지루할 틈이 없는 사람이라는 걸 보여주세요. 뻔한 데이트 코스는 금물입니다." }
+                ],
+                "ESTJ": [
+                    { type: "확실한 리더형", like: "자신의 일에 몰입하는 능력 있는 모습, 확실한 호불호 표현", dislike: "우유부단하게 결정 못 하는 모습, 약속 어기는 것, 게으름", tip: "감정보다는 이성에 호소하세요. 당신이 배울 점이 있고 미래를 함께 그릴 수 있는 사람임을 어필하세요." },
+                    { type: "현실적인 관리자형", like: "시간 약속 칼같이 지키기, 체계적이고 효율적인 데이트", dislike: "징징거리며 감정 쓰레기통 취급하는 것, 무능력한 모습", tip: "데이트 계획을 짤 때 주도적으로 하거나, 상대방의 계획을 완벽하게 따라주세요. 어설픈 건 싫어합니다." }
+                ],
+                "ESFJ": [
+                    { type: "다정한 인싸형", like: "고맙다는 표현 자주 하기, 내 사람들을 챙겨주는 세심함", dislike: "차가운 반응이나 읽씹, 내가 베푼 호의를 무시하는 것", tip: "그 사람이 베푸는 친절에 크게 감동하고 표현하세요. '너 같은 사람 처음이야'라는 말이 특효약입니다." },
+                    { type: "사교적인 외교관형", like: "빠른 답장과 활발한 리액션, 계획적인 데이트, 예의 바름", dislike: "비판적인 태도나 지적, 사회적 규범을 어기는 무례함", tip: "맞장구와 리액션이 생명입니다. 대화할 때 눈을 맞추고 고개를 끄덕여주는 것만으로도 점수를 땁니다." }
+                ],
+                "ENFJ": [
+                    { type: "열정적인 코치형", like: "나의 꿈과 비전을 진심으로 응원해주는 것, 긍정적인 대화", dislike: "이기적인 행동, 고마워할 줄 모르는 태도, 비관적인 말", tip: "그 사람의 선한 영향력을 칭찬하세요. '너 덕분에 내가 더 좋은 사람이 된 것 같아'는 최고의 고백입니다." },
+                    { type: "따뜻한 카리스마형", like: "먼저 다가와서 챙겨주는 따뜻함, 열정적인 리액션과 공감", dislike: "사회적 약자에 대한 무례함, 예의 없는 행동, 차가움", tip: "당신도 따뜻하고 정의로운 사람이라는 것을 보여주세요. 함께 봉사활동을 가거나 배려하는 모습을 보여주세요." }
+                ],
+                "ENTJ": [
+                    { type: "카리스마 대장형", like: "도전적이고 야망 있는 모습, 직설적이고 솔직한 화법", dislike: "감성팔이하며 의존하려는 모습, 무능력하고 게으른 태도", tip: "주눅 들지 말고 당당하게 대하세요. 자신의 일에 몰입하고 성취해내는 멋진 모습을 보여줄 때 반합니다." },
+                    { type: "철두철미한 지휘관형", like: "일 잘하는 프로페셔널함, 끊임없이 자기계발하는 사람", dislike: "시간 낭비하는 무의미한 대화, 주관 없이 휩쓸리는 모습", tip: "효율성을 중시하세요. 용건은 간단히, 데이트는 알차게. 당신이 '성장하는 사람'이라는 확신을 줘야 합니다." }
+                ]
             };
 
             // 2. [맞춤형 전략] 기본 분석 (ME based)
             function getMyStrategy(me, you) {
-                let text = "";
-                let subText = "";
-
+                let text = ""; let subText = "";
                 if (me.includes('E') && you.includes('I')) {
                     text = "🔥 <b>당신의 넘치는 에너지가 상대에겐 부담일 수 있어요.</b><br>질문하고 대답을 재촉하지 말고 <b>'침묵의 3초'</b>를 견디세요. 상대방은 생각할 시간이 필요합니다.";
                     subText = "천천히 다가가면 의외로 말문이 터질 거예요.";
@@ -137,38 +182,33 @@
                 return { text, subText };
             }
 
-            // 3. [NEW] 실전 만남 전략 (어필 & 조심) - 2배 보강된 로직
+            // 3. [NEW] 실전 만남 전략 (어필 & 조심)
             function getMeetingStrategy(me, you) {
                 let appeal = "";
                 let beware = "";
 
-                // APPEAL: 상대방이 좋아하는 것(Target's Preference) + 나의 강점(Me's Strength)
+                // APPEAL: 상대방이 좋아하는 것
                 if (you.includes('S')) {
                     appeal = `👀 <b>시각적/감각적 디테일 챙기기</b><br>
                     ${you}는 눈에 보이는 것을 믿습니다. <b>단정하고 센스 있는 옷차림, 좋은 향기</b>는 기본입니다.
-                    추상적인 미래 얘기보다는 <b>"지금 맛있는 거", "오늘 날씨", "눈앞의 예쁜 풍경"</b>에 대해 구체적으로 이야기하세요.
-                    당신이 현실 감각이 있고 세심한 사람이라는 것을 행동으로 보여주세요.`;
+                    추상적인 미래 얘기보다는 <b>"지금 맛있는 거", "오늘 날씨", "눈앞의 예쁜 풍경"</b>에 대해 구체적으로 이야기하세요.`;
                 } else { // N Target
                     appeal = `✨ <b>상상력과 가치관 자극하기</b><br>
                     ${you}는 뻔한 일상 대화보다 <b>"만약에 우리가...", "너는 인생에서 뭐가 제일 중요해?"</b> 같은 심오한 질문을 좋아합니다.
-                    당신의 <b>독특한 취향이나 꿈</b>을 솔직하게 이야기하세요.
-                    "너랑 대화하면 통하는 게 있어"라는 느낌을 주는 것이 외모보다 중요합니다.`;
+                    당신의 <b>독특한 취향이나 꿈</b>을 솔직하게 이야기하세요.`;
                 }
 
-                // BEWARE: 상대방이 싫어하는 것(Target's Dislike) + 나의 약점(Me's Weakness)
+                // BEWARE: 상대방이 싫어하는 것
                 if (you.includes('J')) {
                     beware = `⏰ <b>시간 약속과 계획 변경 주의</b><br>
                     ${you}에게 <b>지각은 곧 신뢰 하락</b>입니다. 약속 시간 10분 전에 도착해 있는 모습을 보여주세요.
-                    "그냥 만나서 정하자"는 말은 ${you}를 불안하게 합니다.
-                    최소한 <b>식당 하나, 카페 하나 정도는 미리 찾아가서</b> 선택지를 주는 센스를 발휘하세요.`;
+                    "그냥 만나서 정하자"는 말은 ${you}를 불안하게 합니다. 최소한 <b>선택지 2개 정도는 미리 찾아가세요.</b>`;
                 } else { // P Target
                     beware = `🙅‍♂️ <b>통제하려는 태도 금지</b><br>
                     ${you}는 자유로운 영혼입니다. <b>"이거 해야 돼", "저거 해야 돼"</b> 하며 가르치려 들거나 통제하려 하지 마세요.
-                    예상치 못한 변수가 생겨도 <b>"오히려 좋아! 다른 데 가보자"</b> 하며 웃어넘기는 유연함이 필요합니다.
-                    너무 빡빡한 일정보다는 여유로운 흐름을 즐기세요.`;
+                    예상치 못한 변수가 생겨도 <b>"오히려 좋아! 다른 데 가보자"</b> 하며 웃어넘기는 유연함이 필요합니다.`;
                 }
 
-                // 추가 디테일 (T/F)
                 if (you.includes('T')) {
                     appeal += `<br><br>🧠 <b>논리적이고 똑부러지는 모습</b><br>고민을 말할 때 감정에만 호소하기보다 <b>"그래서 이렇게 해결하려고 해"</b>라고 주관을 보여주세요.`;
                 } else {
@@ -212,10 +252,19 @@
             }
 
             function showResult(me, you) {
-                const target = targetAnalysis[you];
+                // [NEW LOGIC] 랜덤으로 2개 중 하나 선택 + 같은 타입일 때 겹치지 않게 처리
+                const targetDataArray = mbtiData[you];
+                let selectedIndex = Math.floor(Math.random() * targetDataArray.length);
+                
+                // 만약 나와 상대방이 같은 MBTI라면? (여기서는 상대방 분석만 보여주므로 큰 상관 없지만 다양성을 위해)
+                // 현재 페이지는 "상대방 공략"이 메인이므로, 매번 랜덤하게 다른 페르소나가 나오는 것만으로도 충분합니다.
+                // 다만, 확실한 다양성을 위해 세션에 이전 인덱스를 저장했다가 다른 걸 보여주는 로직을 추가할 수도 있습니다.
+                // 여기서는 심플하게 랜덤 선택으로 갑니다. (확률 50%)
+
+                const target = targetDataArray[selectedIndex];
                 const strategy = getMyStrategy(me, you);
-                const meeting = getMeetingStrategy(me, you); // 실전 만남 전략
-                const messenger = getMessengerStrategy(you); // 카톡 전략
+                const meeting = getMeetingStrategy(me, you);
+                const messenger = getMessengerStrategy(you);
 
                 const resultHTML = `
                     <div class="max-w-4xl mx-auto space-y-10">
@@ -292,6 +341,12 @@
                                 </div>
 
                             </div>
+                        </div>
+
+                        <div class="mt-8 pb-20 text-center">
+                            <a href="https://link.coupang.com/a/ddcSv0" target="_blank" class="inline-flex items-center justify-center gap-2 w-full md:w-auto px-8 py-4 bg-gradient-to-r from-emerald-400 to-cyan-500 text-white font-black text-lg rounded-full shadow-xl hover:scale-105 transition-transform bounce-custom">
+                                <span>✈️ ${me} & ${you}가 환장하는 여행지 쿠팡에서 보기</span>
+                            </a>
                         </div>
 
                         <div class="mt-12 pb-12">
