--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mt-10 pb-16 text-center">
+                            <a href="https://link.coupang.com/a/ddcSv0" target="_blank" class="inline-flex items-center justify-center gap-2 w-full md:w-auto px-8 py-5 bg-gradient-to-r from-teal-400 via-cyan-500 to-blue-500 text-white font-black text-lg md:text-xl rounded-full shadow-xl hover:shadow-2xl hover:scale-105 transition-all duration-300 bounce-custom">
+                                <i class="fas fa-plane-departure"></i>
+                                <span>✈️ ${mbtiA} & ${mbtiB} 조합이 너무 만족해하는 여행지 쿠팡에서 보기</span>
+                            </a>
+                        </div>
 
                     <div class="mt-12">
                         <h3 class="text-center font-bold text-lg text-slate-700 mb-4 animate-bounce">
