--- a/some/index.html
+++ b/some/index.html
@@ -348,6 +348,12 @@
                                 <span>✈️ ${me} & ${you}가 환장하는 여행지 쿠팡에서 보기</span>
                             </a>
                         </div>
+                        <div class="mt-10 pb-20 text-center">
+                            <a href="https://link.coupang.com/a/ddddJ5" target="_blank" class="inline-flex items-center justify-center gap-2 w-full md:w-auto px-8 py-5 bg-gradient-to-r from-pink-500 via-rose-500 to-purple-600 text-white font-black text-lg md:text-xl rounded-full shadow-xl hover:shadow-2xl hover:scale-105 transition-all duration-300 bounce-custom">
+                                <i class="fas fa-gift"></i>
+                                <span>🎁 ${you} 상대방이 좋아할만한 선물 쿠팡에서 고르기</span>
+                            </a>
+                        </div>
 
                         <div class="mt-12 pb-12">
                             <h3 class="text-center font-bold text-lg text-slate-700 mb-4 animate-bounce">
