--- a/index.html
+++ b/index.html
@@ -328,6 +328,12 @@
                             <span>✈️ ${mbtiA} & ${mbtiB} 조합이 환장하는 여행지 보기</span>
                         </a>
                     </div>
+                    <div class="mt-4 pb-20 text-center">
+    <button onclick="shareLink()" class="inline-flex items-center justify-center gap-2 w-full md:w-auto px-8 py-4 bg-gray-100 text-gray-600 font-bold text-lg rounded-full shadow-sm hover:bg-gray-200 transition-colors">
+        <i class="fas fa-share-alt"></i>
+        <span>친구에게 결과 공유하기</span>
+    </button>
+</div>
 
                     <div class="mt-12 pb-12">
                         <h3 class="text-center font-bold text-lg text-slate-700 mb-4 animate-bounce">
@@ -385,6 +391,25 @@
             document.getElementById('analyze-btn').addEventListener('click', validateAndAnalyze);
             document.getElementById('back-btn').addEventListener('click', resetPage);
         });
+        // 공유하기 기능 (모바일: 공유시트 / PC: 클립보드 복사)
+            window.shareLink = function() {
+                const currentUrl = window.location.href;
+                if (navigator.share) {
+                    navigator.share({
+                        title: '우리 커플 MBTI 궁합 결과',
+                        text: '내 성향과 연인의 궁합을 분석해봤어! 결과가 소름돋네 ㄷㄷ',
+                        url: currentUrl,
+                    });
+                } else {
+                    const t = document.createElement("textarea");
+                    document.body.appendChild(t);
+                    t.value = currentUrl;
+                    t.select();
+                    document.execCommand('copy');
+                    document.body.removeChild(t);
+                    alert('링크가 복사되었습니다! 친구에게 붙여넣기(Ctrl+V) 하세요.');
+                }
+            }
     </script>
 </body>
 </html>
