--- a/some/index.html
+++ b/some/index.html
@@ -350,6 +350,15 @@
                                 <span>🎁 ${you} 상대방이 좋아할만한 선물 쿠팡에서 고르기</span>
                             </a>
                         </div>
+                        <div class="mt-10 pb-20 text-center">
+    <a href="..." ...>🎁 ... 선물 쿠팡에서 고르기</a>
+</div>
+
+<div class="mt-4 pb-24 text-center"> <button onclick="shareLink()" class="inline-flex items-center justify-center gap-2 w-full md:w-auto px-8 py-4 bg-gray-100 text-gray-600 font-bold text-lg rounded-full shadow-sm hover:bg-gray-200 transition-colors">
+        <i class="fas fa-share-alt"></i>
+        <span>이 공략법 나만 알기 아까워! 공유하기</span>
+    </button>
+</div>
 
                         <div class="mt-12 pb-12">
                             <h3 class="text-center font-bold text-lg text-slate-700 mb-4 animate-bounce">
@@ -398,6 +407,25 @@
             document.getElementById('analyze-btn').addEventListener('click', validateAndAnalyze);
             document.getElementById('back-btn').addEventListener('click', resetPage);
         });
+        // 공유하기 기능
+            window.shareLink = function() {
+                const currentUrl = window.location.href;
+                if (navigator.share) {
+                    navigator.share({
+                        title: '썸남썸녀 MBTI 공략법',
+                        text: '그 사람 마음을 얻는 치트키 발견! 너도 한번 해봐 😎',
+                        url: currentUrl,
+                    });
+                } else {
+                    const t = document.createElement("textarea");
+                    document.body.appendChild(t);
+                    t.value = currentUrl;
+                    t.select();
+                    document.execCommand('copy');
+                    document.body.removeChild(t);
+                    alert('링크가 복사되었습니다! 친구에게 알려주세요.');
+                }
+            }
     </script>
 </body>
 </html>
