--- a/biz/index.html
+++ b/biz/index.html
@@ -340,7 +340,7 @@
                         <div class="mt-10 pb-20 text-center">
                             <a href="https://link.coupang.com/a/ddddJ5" target="_blank" class="inline-flex items-center justify-center gap-2 w-full md:w-auto px-8 py-5 bg-gradient-to-r from-blue-600 via-indigo-500 to-purple-600 text-white font-black text-lg md:text-xl rounded-full shadow-xl hover:shadow-2xl hover:scale-105 transition-all duration-300 bounce-custom">
                                 <i class="fas fa-gift"></i>
-                                <span>🎁 ${you} 상사 마음 녹일 센스있는 선물 보기</span>
+                                <span>🎁 ${you} 상사 마음 녹일 선물 보기</span>
                             </a>
                         </div>
 
