--- a/friends-travel/index.html
+++ b/friends-travel/index.html
@@ -91,7 +91,7 @@
                 <button id="back-btn" class="text-slate-400 hover:text-slate-700 font-medium text-sm flex items-center gap-2 transition-colors">
                     <i class="fas fa-chevron-left"></i> 다시하기
                 </button>
-                <span class="text-[10px] font-bold text-sky-500 bg-sky-50 px-2 py-1 rounded">VER 2.2</span>
+                <span class="text-[10px] font-bold text-sky-500 bg-sky-50 px-2 py-1 rounded">VER 2.3</span>
             </div>
 
             <div id="result-content" class="space-y-6"></div>
@@ -125,7 +125,7 @@
     </div>
 
     <div class="fixed bottom-2 right-2 text-[10px] text-slate-300 font-mono pointer-events-none select-none z-50">
-        Ver 2.2 Premium
+        Ver 2.3 Style+
     </div>
 
     <datalist id="mbti-list"></datalist>
@@ -136,24 +136,104 @@
             const dataList = document.getElementById('mbti-list');
             validMbtiList.forEach(t => { let opt = document.createElement('option'); opt.value = t; dataList.appendChild(opt); });
 
-            // 1. 여행 스타일 데이터 (Ver 2.1 유지)
+            // 1. 여행 스타일 데이터 (분량 2배 증량 & 디테일 강화)
             const mbtiData = {
-                "ISTJ": [{ type: "오차 없는 엑셀 여행자", like: "구글맵 로드뷰 예습, 영수증 챙겨서 정산, 예약 확정서 출력", dislike: "당일 아침 계획 뒤엎기, 약속 지각, 웨이팅 예측 안 되는 핫플", tip: "계획대로 착착 진행될 때 도파민이 터집니다. '너 계획 진짜 완벽하다' 한마디면 밥도 사줍니다." }],
-                "ISFJ": [{ type: "걸어 다니는 4차원 주머니", like: "친구 인생샷 건져주기, 상비약/우산 챙기기, 평화로운 분위기", dislike: "무모한 액티비티, 큰 소리로 싸우기, 체력 방전될 때까지 걷기", tip: "속으로 지쳐있을 수 있으니 수시로 '힘들지 않아? 좀 쉴까?'라고 물어봐 주는 센스가 필수입니다." }],
-                "INFJ": [{ type: "의미 찾아 떠나는 순례자", like: "노을 보며 멍때리기, 밤새 나누는 깊은 대화, 사람 없는 골목길", dislike: "시끄러운 단체 관광, 가벼운 농담, 더럽고 무질서한 환경", tip: "여행의 '낭만'이 중요합니다. 숙소에서 맥주 한 캔 하며 '오늘 어땠어?'라고 진지하게 물어봐 주세요." }],
-                "INTJ": [{ type: "효율 극대화 전략가", like: "완벽한 동선 최적화, 지적 호기심 충족(박물관), 이동 시간 최소화", dislike: "비효율적인 핫플 줄 서기, 멍청한 가이드, 징징거리는 것", tip: "'예뻐서' 가는 건 안 통합니다. '동선상 최적'이라는 논리로 설득해야 움직입니다." }],
-                "ISTP": [{ type: "고독한 생존 전문가", like: "혼자만의 자유시간, 멍때리기, 발길 닿는 대로(구글맵 X), 찐맛집", dislike: "강제적인 단체 행동, 아침 기상 강요, 보여주기식 인스타 카페", tip: "아침에 깨우지 마세요. 각자 놀다가 저녁에 만나는 걸 제일 좋아합니다." }],
-                "ISFP": [{ type: "침대와 물아일체", like: "호텔 침대 뒹굴기, 룸서비스, 예쁜 수영장, 소품샵", dislike: "극기훈련급 일정, 등산, 재촉하기, 결정 강요", tip: "'오늘은 수영하고 푹 쉬자'가 최고의 계획입니다. 재촉하면 병납니다." }],
-                "INFP": [{ type: "낭만 먹고 사는 방랑자", like: "골목길 산책, 문구점 투어, 현지 느낌, 몽글몽글한 분위기", dislike: "사람 많은 랜드마크, 현실적인 잔소리(돈/시간) 계속하는 것", tip: "길을 잃어도 '모험이다!' 해주세요. 낭만을 즐기는 최고의 파트너입니다." }],
-                "INTP": [{ type: "호기심 천국 너드", like: "과학관/유적지, 특이한 건축물, 엉뚱한 토론, 기괴한 장소", dislike: "뻔한 관광 코스, 맛집 줄 서기, 의미 없는 스몰토크, 감정 강요", tip: "이상한 간판에 꽂혀도 놀라지 마세요. 남들은 안 가는 곳을 찾아냅니다." }],
-                "ESTP": [{ type: "빠꾸 없는 스릴 러버", like: "액티비티(서핑/번지), 클럽/파티, 즉흥적 만남", dislike: "호텔방에 박혀있기, 박물관 설명 듣기, 정적인 분위기", tip: "체력이 미쳤습니다. 당신이 지칠 때쯤 2차 가자고 할 테니 영양제 챙기세요." }],
-                "ESFP": [{ type: "이 구역의 파티피플", like: "새로운 사람, 화려한 조명/음악, 야시장, 충동구매", dislike: "조용한 명상, 혼자 있는 시간, 심각한 얘기, 잔소리", tip: "리액션이 전부입니다. '대박!' 외쳐주면 신나서 본인이 다 쏩니다." }],
-                "ENFP": [{ type: "어디로 튈지 모르는 댕댕이", like: "현지인과 친구 먹기, 축제, 텐션 업, 새로운 도전", dislike: "지루한 일상, 잠만 자기, 통제(하지 마라)", tip: "여권, 지갑... 당신이 다 챙겨야 합니다. 칠칠맞지만 미워할 수 없죠." }],
-                "ENTP": [{ type: "청개구리 탐험가", like: "사회 이슈 토론, 특이한 체험, 도전적 음식(벌레 튀김)", dislike: "뻔한 패키지, 답답한 가이드, 무조건적 동의, 통제", tip: "불평하면 같이 욕하지 말고 논리적으로 토론하세요. 싸우는 게 아니라 즐기는 겁니다." }],
-                "ESTJ": [{ type: "자비 없는 총무 겸 가이드", like: "엑셀 예산안, 10분 단위 일정, 아침 7시 기상, 효율", dislike: "돈 계산 틀린 것, 지각, 밍기적거림, 계획 변경", tip: "총무랑 대장 시켜주세요. '충성!' 하고 따르면 세상 편하게 여행합니다." }],
-                "ESFJ": [{ type: "눈치 백단 케어 담당", like: "맛집 예약, 컨디션 체크, 단체 사진, 시밀러룩", dislike: "개인플레이, 투덜대기, 호의 무시, 침묵", tip: "챙겨줄 때 '센스 쩐다'고 칭찬해주세요. 그 맛에 여행 계획 짭니다." }],
-                "ENFJ": [{ type: "열정 만수르 멘토", like: "모두가 행복한 여행, 의미 있는 체험, 파이팅 구호", dislike: "불평불만, 이기적 행동, 분위기 망치기", tip: "혼자 튀지 말고 '우리'를 강조하세요. '우리 진짜 잘 맞는다'는 말이 최고입니다." }],
-                "ENTJ": [{ type: "정복자 스타일 리더", like: "도장 깨기(하루 5곳), 효율/가성비, 성취감, 주도권", dislike: "늘어지는 것, 징징대기, 시간 낭비, 우유부단", tip: "몸은 힘들어도 남는 건 제일 많습니다. 불만 있으면 확실한 대안을 가져가세요." }]
+                "ISTJ": [{ 
+                    type: "분 단위 계획표를 숭배하는 인간 엑셀", 
+                    like: "출발 3일 전부터 시뮬레이션 돌린 오차 없는 동선, 혹시 몰라 챙겨 온 바우처 출력물 3장, 10원 단위까지 딱 떨어지는 깔끔한 더치페이 정산", 
+                    dislike: "당일 아침에 갑자기 '그냥 바다나 보러 갈까?'라며 계획 뒤엎기, 약속 시간 5분 이상 늦어놓고 '코리안 타임' 드립 치기, 웨이팅 끝이 안 보이는 인스타 감성 핫플", 
+                    tip: "이 친구는 여행을 '즐기러' 가는 게 아니라 '퀘스트를 깨러' 갑니다. 계획대로 착착 진행될 때 희열을 느끼니, 제발 늦잠 자지 말고 군말 없이 따라주세요. '와, 너 계획 진짜 AI 수준이다' 한마디면 밥도 사줍니다." 
+                }],
+                "ISFJ": [{ 
+                    type: "도라에몽 주머니를 가진 걸어 다니는 구급상자", 
+                    like: "친구 인생샷 건져주려 바닥에 눕는 희생정신, 상비약/물티슈/보조배터리/우산 바리바리 챙기기, 서로 배려하며 큰 소리 안 나는 평화로운 분위기", 
+                    dislike: "안전장치 없는 위험하고 무모한 액티비티(번지점프 등), 식당 직원에게 함부로 대하거나 큰 소리로 싸우는 것, 체력 방전될 때까지 걷게 만드는 지옥의 행군", 
+                    tip: "당신이 '아 맞다, 그거 안 가져왔다' 하면 이 친구 가방에서 다 나옵니다. 겉으론 웃고 있어도 속으론 발 아프고 지쳐있을 수 있으니 수시로 '힘들지 않아? 좀 쉴까?'라고 물어봐 주는 센스가 필수입니다." 
+                }],
+                "INFJ": [{ 
+                    type: "여행의 의미를 찾아 떠나는 고독한 순례자", 
+                    like: "노을 보며 1시간 동안 말없이 멍때리기, 밤새 나누는 깊은 대화(인생, 우주, 가치관), 관광객 없이 현지인만 있는 조용한 골목길 투어", 
+                    dislike: "깃발 꽂고 다니는 시끄러운 단체 관광 패키지, 의미 없는 가벼운 농담 따먹기나 술 게임, 쓰레기 굴러다니고 무질서한 시장통", 
+                    tip: "유명 관광지 도장 깨기보다는 여행의 '낭만'과 '의미'를 중요시합니다. 밤에 숙소에서 맥주 한 캔 하면서 '오늘 여행 어땠어? 어떤 점이 좋았어?'라고 진지하게 물어봐 주면 감동해서 눈물 흘릴 수도 있습니다." 
+                }],
+                "INTJ": [{ 
+                    type: "동선 최적화에 목숨 건 효율 극대화 전략가", 
+                    like: "동선 꼬임 없이 물 흐르듯 이어지는 완벽한 스케줄, 지적 호기심을 채워주는 박물관/역사 투어, 불필요한 이동 시간을 0으로 만드는 것", 
+                    dislike: "맛도 없는데 단지 '예뻐서' 가는 비효율적인 핫플 줄 서기, 팩트 체크 안 된 가이드의 설명, 해결책 없이 감정에 호소하며 징징거리는 것", 
+                    tip: "이 친구를 설득하려면 감성이 아니라 논리가 필요합니다. '여기 예쁘대'가 아니라 '여기가 세계문화유산인데 동선상 지금 가는 게 최적이야'라고 말해야 움직입니다. 플랜 B까지 다 짜놨으니 믿고 따르세요." 
+                }],
+                "ISTP": [{ 
+                    type: "귀찮음과 호기심이 공존하는 고독한 생존 전문가", 
+                    like: "누구의 간섭도 받지 않는 혼자만의 자유시간, 아무 생각 없이 멍때리기, 계획 없이 발길 닿는 대로 가기(구글맵 의존 X), 현지인 찐맛집", 
+                    dislike: "강제적인 단체 행동(다 같이 점프샷 찍기, 단체티 입기), 아침 일찍 일어나는 것, 보여주기식 인스타 카페에서 1시간 줄 서기", 
+                    tip: "아침에 깨우지 마세요. 11시까지 자게 놔두고 혼자 산책 다녀오세요. 그리고 '각자 놀다가 저녁에 맛있는 거 먹자'고 하면 세상에서 제일 쿨하고 좋은 친구가 됩니다. 과도한 관심은 사절입니다." 
+                }],
+                "ISFP": [{ 
+                    type: "호텔 침대와 물아일체 된 눕방 여행러", 
+                    like: "푹신한 호텔 침대에서 뒹굴기, 룸서비스 시켜 먹으며 넷플릭스 보기, 예쁜 수영장에서 인생샷 건지기, 아기자기한 소품샵 구경", 
+                    dislike: "새벽 5시 기상하는 극기훈련급 빡빡한 일정, 땀 뻘뻘 흘리는 등산, 빨리빨리 재촉하는 것, 결정 강요하기('뭐 먹을래? 빨리 말해')", 
+                    tip: "이 친구에게 일정표 들이밀지 마세요. '오늘은 수영하고 맛있는 거 먹고 푹 쉬자'가 최고의 계획입니다. 휴식이 곧 여행이라고 생각하는 유형이니 재촉하면 스트레스로 병납니다." 
+                }],
+                "INFP": [{ 
+                    type: "현실 감각 제로, 낭만 먹고 사는 방랑자", 
+                    like: "정처 없이 골목길 산책하기, 헌책방이나 문구점 투어, 현지 느낌 물씬 나는 낯선 장소, 몽글몽글한 분위기에서 엽서 쓰기", 
+                    dislike: "사람 미어터지는 랜드마크 찍기, 쇼핑몰 인파에 갇히기, 옆에서 현실적인 잔소리(돈, 시간, 효율) 계속하는 것", 
+                    tip: "가끔 길을 잃거나 엉뚱한 곳으로 가도 '와, 이것도 모험이다!' 하고 맞장구쳐주세요. 현실 감각은 좀 떨어질지 몰라도, 여행의 낭만을 즐기는 데는 최고의 감성 파트너입니다." 
+                }],
+                "INTP": [{ 
+                    type: "이상한 포인트에 꽂히는 호기심 천국 너드", 
+                    like: "과학관/박물관/역사 유적지 탐방, 특이한 건축물 구조 분석하기, 밤새 엉뚱한 주제(외계인 등)로 토론하기, 남들이 안 가는 기괴한 곳", 
+                    dislike: "남들 다 하는 뻔한 관광 코스 돌기, 인스타용 맛집 줄 서기, 의미 없는 스몰토크 강요받기, 감정적인 위로 강요받기", 
+                    tip: "갑자기 엉뚱한 골목으로 새거나 이상한 간판에 꽂혀도 놀라지 마세요. 남들은 절대 안 가는 기괴한 곳에서 엄청난 무언가를 발견해내는 재주가 있습니다. (가끔 밥 먹는 걸 까먹으니 챙겨줘야 함)" 
+                }],
+                "ESTP": [{ 
+                    type: "내일은 없는 것처럼 노는 빠꾸 없는 스릴 러버", 
+                    like: "스카이다이빙/서핑/번지점프 등 짜릿한 액티비티, 핫한 클럽이나 파티 가기, 즉흥적으로 현지 친구 사귀어서 합석하기", 
+                    dislike: "호텔방에만 박혀있기, 박물관 관람하며 지루한 설명 듣기, 정적인 분위기에서 명상하기, 계획표대로만 움직여야 하는 것", 
+                    tip: "체력이 미쳤습니다. 당신이 지쳐 쓰러질 때쯤 '이제 2차 가야지? 밤새워야지!'라고 할 겁니다. 여행 전 홍삼이나 비타민을 꼭 챙겨 드세요. 고민할 시간에 일단 저지르는 스타일입니다." 
+                }],
+                "ESFP": [{ 
+                    type: "세상의 중심은 나, 이 구역의 파티피플", 
+                    like: "새로운 사람들과 어울려 놀기, 화려한 조명과 음악이 있는 곳, 시끌벅적한 야시장 투어, 눈에 보이는 건 다 사는 충동구매", 
+                    dislike: "조용한 절이나 사원에서 명상하기, 혼자 있는 시간, 심각하고 우울한 이야기, 돈 아껴 쓰라고 옆에서 잔소리하기", 
+                    tip: "리액션이 여행의 전부입니다. 별거 아닌 거에도 '대박!', '미쳤다!', '너무 예쁘다!' 외쳐주면 신나서 본인이 밥이고 술이고 다 쏩니다. 통장 잔고는 포기하고 그냥 즐기세요." 
+                }],
+                "ENFP": [{ 
+                    type: "어디로 튈지 모르는 에너자이저 댕댕이", 
+                    like: "지나가던 현지인이랑 말 트고 친구 먹기, 우연히 발견한 지역 축제 참여하기, 1분마다 바뀌는 텐션, 새로운 도전 해보기", 
+                    dislike: "반복되는 지루한 일상, 숙소에서 잠만 자는 것, 이거 하지 마라 저거 하지 마라 통제하는 것, 혼자 방치되는 것", 
+                    tip: "여권, 지갑, 핸드폰... 당신이 다 챙겨야 합니다. 칠칠맞게 흘리고 다니지만, 특유의 애교와 긍정 에너지로 미워할 수 없게 만듭니다. '갑자기?'라고 정색하지 말고 '재밌겠다!'라고 해주세요." 
+                }],
+                "ENTP": [{ 
+                    type: "금기된 것에 도전하는 청개구리 탐험가", 
+                    like: "현지 사회 이슈에 대해 토론하기, 남들이 안 하는 특이한 체험, 도전적인 음식 먹어보기(벌레 튀김 등), 길 잃어도 즐거워하기", 
+                    dislike: "뻔하디뻔한 패키지 코스, 멍청하고 답답한 가이드의 설명, 무조건적인 동의와 칭찬, 권위적인 통제", 
+                    tip: "이 친구가 뭔가 불평하거나 딴지를 걸기 시작하면, 같이 욕해주지 말고 논리적으로 토론해주세요. 싸우는 게 아니라 지적 유희를 즐기는 중입니다. 길을 잃어도 '오히려 좋아'를 외치는 멘탈갑입니다." 
+                }],
+                "ESTJ": [{ 
+                    type: "1분 1초도 낭비하지 않는 자비 없는 총무", 
+                    like: "엑셀로 완벽 정리한 예산안, 10분 단위 일정표, 아침 7시 기상 및 조식 필참, 빠르고 효율적인 이동 수단", 
+                    dislike: "돈 계산 안 맞는 것(10원이라도), 약속 시간 늦는 것, 느긋하게 밍기적거리는 것, 합당한 이유 없는 계획 변경", 
+                    tip: "그냥 이 친구를 총무랑 대장 시켜주세요. 그게 제일 편합니다. 당신은 그저 '충성! 준비 완료!' 하고 따라다니면 됩니다. 토 달면 그때부터 피곤한 설교가 시작됩니다." 
+                }],
+                "ESFJ": [{ 
+                    type: "모두를 챙겨야 직성이 풀리는 눈치 백단 케어 담당", 
+                    like: "맛집 미리 예약해오기, 친구들 컨디션 수시로 체크하기, 단체 사진 주도적으로 찍기, 시밀러룩 맞춰 입기", 
+                    dislike: "개인플레이하며 이탈하는 것, 밥 맛없다고 투덜대기, 나의 호의를 무시하는 태도, 어색한 침묵이 흐르는 것", 
+                    tip: "이 친구가 챙겨줄 때 당연하게 생각하지 말고 '와 너 진짜 센스 쩐다, 고마워'라고 폭풍 칭찬해주세요. 그 인정욕구가 여행을 이끌어가는 원동력입니다. 가족 선물까지 챙기는 세심함이 있습니다." 
+                }],
+                "ENFJ": [{ 
+                    type: "지구 평화와 팀워크를 중시하는 열정 멘토", 
+                    like: "모두가 행복하고 만족하는 여행, 의미 있는 체험 활동, 파이팅 넘치는 구호 외치기, 밤샘 수다 떨며 서로 칭찬하기", 
+                    dislike: "불평불만 늘어놓기, 이기적인 단독 행동, 여행 분위기 망치는 사람, 비협조적인 태도, 남 험담하기", 
+                    tip: "이 친구는 '우리'가 중요합니다. 혼자 튀려고 하지 말고 팀워크를 보여주세요. 저녁에 맥주 한잔하며 '우리 진짜 잘 맞는다, 행복해'라고 말해주면 여행뽕에 취해 좋아 죽습니다." 
+                }],
+                "ENTJ": [{ 
+                    type: "도시를 정복하러 온 야망 넘치는 리더", 
+                    like: "하루에 5개 도시 찍기(도장 깨기), 최고의 효율과 가성비, 럭셔리 & 성취감, 주도권 잡고 지휘하기", 
+                    dislike: "늘어지는 것, 징징대기, 멍청하게 일 처리해서 시간 낭비하는 것, 우유부단하게 결정 못 하는 것", 
+                    tip: "이 친구랑 여행 가면 몸은 극도로 힘든데, 남는 건 제일 많습니다. 군말 없이 따르면 5성급 호텔 업그레이드 같은 행운이 따를 수도 있습니다. 불만 있으면 확실한 대안을 제시하세요." 
+                }]
             };
 
             // 2. 궁합 분석 (유지)
@@ -163,26 +243,26 @@
                 const sameTF = (me.includes('T') === you.includes('T'));
 
                 if (me.includes('J') && you.includes('P')) {
-                    score = 60; title = "🔥 계획파 vs 즉흥파"; desc = "당신의 10분 단위 계획표를 친구는 '참고용'으로만 봅니다. 오전엔 계획대로, 오후엔 자유로 타협하세요.";
+                    score = 60; title = "🔥 계획파 vs 즉흥파"; desc = "당신의 10분 단위 계획표를 친구는 '참고용'으로만 봅니다. 친구를 통제하려다간 첫날부터 싸웁니다. 오전엔 계획대로, 오후엔 자유시간으로 타협하세요.";
                 } else if (me.includes('P') && you.includes('J')) {
-                    score = 70; title = "🎒 짐꾼 vs 대장님"; desc = "숨 막혀도 길 찾기와 예약은 친구가 다 합니다. 편하게 다니려면 잔소리는 감수하세요.";
+                    score = 70; title = "🎒 짐꾼 vs 대장님"; desc = "친구의 빡빡한 일정에 숨이 턱턱 막히지만, 예약과 길 찾기는 친구가 다 해줍니다. 몸이 편하려면 잔소리는 감수하고 군말 없이 따르세요.";
                 } else if (me.includes('J') && you.includes('J')) {
-                    score = 80; title = "⚡ 자존심 강한 두 리더"; desc = "서로의 계획이 맞다고 싸울 수 있습니다. 오전/오후 당번을 나누세요.";
+                    score = 80; title = "⚡ 자존심 강한 두 리더"; desc = "둘 다 계획이 확실해서 오히려 '내 동선'이 맞다고 싸울 수 있습니다. 출발 전에 '오전 당번 / 오후 당번'을 명확히 나누는 게 평화의 지름길입니다.";
                 } else {
-                    score = 90; title = "🌀 대환장 무계획 콤비"; desc = "뭐 먹을지 1시간 고민하다 편의점 가겠지만, 평생 남을 에피소드는 제일 많습니다!";
+                    score = 90; title = "🌀 대환장 무계획 콤비"; desc = "둘 다 계획이 없어서 '뭐 먹지?'만 1시간 고민하다 편의점 가겠지만, 의외로 스트레스 없고 평생 남을 레전드 에피소드는 제일 많이 생깁니다!";
                 }
 
                 if (!sameTF) {
-                    if (me.includes('T')) { conflict = "⚠️ <b>[주의]</b> 당신의 무심한 말투에 친구는 여행 내내 상처받을 수 있습니다. 영혼 없어도 리액션 해주세요."; score -= 10; }
-                    else { conflict = "⚠️ <b>[주의]</b> 친구에게 위로를 바라지 마세요. '다리 아파' 하면 '택시 타'라고 답할 겁니다. 그게 사랑입니다."; score -= 10; }
+                    if (me.includes('T')) { conflict = "⚠️ <b>[주의]</b> 당신의 무심한 말투('별론데?', '비효율적인데?')에 친구는 여행 내내 상처받고 꽁해 있을 수 있습니다. 영혼 없어도 리액션 해주세요."; score -= 10; }
+                    else { conflict = "⚠️ <b>[주의]</b> 친구에게 감정적인 위로를 바라지 마세요. '다리 아파ㅠ'라고 하면 '택시 타'라고 답할 겁니다. 해결책을 주는 게 그들만의 사랑 표현입니다."; score -= 10; }
                 } else {
-                    if (me.includes('F')) { conflict = "💖 <b>[좋음]</b> 감성 코드가 잘 맞아서 낙엽만 굴러가도 웃음꽃이 피겠네요."; score += 10; }
-                    else { conflict = "🤖 <b>[좋음]</b> 불만 있으면 바로 말하고 뒤끝 없이 해결하니 세상 쿨하고 편안합니다."; score += 10; }
+                    if (me.includes('F')) { conflict = "💖 <b>[좋음]</b> 둘 다 감성이 풍부해서 낙엽만 굴러가도 꺄르르 웃겠네요. 서로 사진 찍어주고 칭찬 감옥에 가두느라 시간 가는 줄 모를 겁니다."; score += 10; }
+                    else { conflict = "🤖 <b>[좋음]</b> 감정 소모 없는 쿨한 여행! 불만 있으면 바로 말하고 뒤끝 없이 해결하니 세상 편안합니다. 효율 최강 조합입니다."; score += 10; }
                 }
                 return { score, title, desc, conflict };
             }
 
-            // 3. [PREMIUM] 16개 유형별 상세 시크릿 데이터 (3배 분량)
+            // 3. 시크릿 데이터 (유지)
             const secretData = {
                 "ISTJ": {
                     appeal: "<li><b>시간 약속은 목숨처럼:</b> 5분 일찍 나와서 기다리면 당신을 '신뢰할 수 있는 인간'으로 분류합니다.</li><li><b>계획 칭찬하기:</b> '와, 이 동선 진짜 천재적이다'라고 말해보세요. 입꼬리 씰룩거립니다.</li>",
@@ -283,7 +363,6 @@
             };
 
             function getSecretContent(you) {
-                // 데이터가 있으면 가져오고, 없으면 기본값 (방어 코드)
                 const data = secretData[you] || { appeal: "데이터 없음", beware: "데이터 없음", role: "데이터 없음", rule: "데이터 없음" };
                 return data;
             }
@@ -298,13 +377,9 @@
             }
 
             window.unlockSecret = function() {
-                // 쿠팡 링크 열기
                 window.open('https://link.coupang.com/a/ddddJ5', '_blank');
-                
-                // 잠금 해제 UI 처리
                 const overlay = document.querySelector('.lock-overlay');
                 const content = document.querySelector('.blur-content');
-                
                 overlay.classList.add('hidden');
                 content.classList.add('unlocked');
             }
