--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+        <meta name="google-adsense-account" content="ca-pub-6540004747918466">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>연인과 나의 MBTI 궁합 & 안 싸우는 꿀팁</title>
     <script src="https://cdn.tailwindcss.com"></script>
