--- a/some/index.html
+++ b/some/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+        <meta name="google-adsense-account" content="ca-pub-6540004747918466">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>썸남썸녀 공략 가이드 | 그 사람의 마음을 여는 열쇠</title>
