--- a/biz/index.html
+++ b/biz/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+        <meta name="google-adsense-account" content="ca-pub-6540004747918466">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>직장상사 공략 가이드 | 사회생활 만렙 치트키</title>
