--- a/biz/index.html
+++ b/biz/index.html
@@ -110,7 +110,7 @@
                         <p class="text-sm font-bold text-slate-700">썸남썸녀 공략</p>
                         <p class="text-[10px] text-slate-400">플러팅 필승법</p>
                     </a>
-                    <a href="https://aimbti.xyz/travel" class="clean-card p-4 text-center hover:shadow-md transition-shadow group bg-white">
+                    <a href="https://aimbti.xyz/friends-travel/" class="clean-card p-4 text-center hover:shadow-md transition-shadow group bg-white">
                         <div class="w-10 h-10 bg-sky-50 rounded-full flex items-center justify-center mx-auto mb-2 text-sky-500 group-hover:scale-110 transition-transform">
                             <i class="fas fa-plane"></i>
                         </div>
