--- a/some/index.html
+++ b/some/index.html
@@ -103,7 +103,7 @@
             <div class="mt-12 pt-8 border-t border-rose-200/50">
                 <h3 class="text-center font-bold text-slate-800 mb-6">👀 다른 테스트도 해보세요!</h3>
                 <div class="grid grid-cols-2 gap-3">
-                    <a href="/travel" class="clean-card p-4 text-center hover:shadow-md transition-shadow group bg-white">
+                    <a href="/friends-travel/" class="clean-card p-4 text-center hover:shadow-md transition-shadow group bg-white">
                         <div class="w-10 h-10 bg-sky-50 rounded-full flex items-center justify-center mx-auto mb-2 text-sky-500 group-hover:scale-110 transition-transform">
                             <i class="fas fa-plane"></i>
                         </div>
