--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p class="text-[10px] text-slate-400 mt-1">플러팅 필승 전략</p>
                     </button>
 
-                    <button onclick="goTest('/travel')" class="bg-white border border-sky-100 p-4 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-1 transition-all group flex flex-col items-center text-center w-full">
+                    <button onclick="goTest('/friends-travel')" class="bg-white border border-sky-100 p-4 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-1 transition-all group flex flex-col items-center text-center w-full">
                         <div class="w-10 h-10 bg-sky-50 rounded-full flex items-center justify-center text-sky-500 mb-2 group-hover:scale-110 transition-transform">
                             <i class="fas fa-plane"></i>
                         </div>
