--- a/index.html
+++ b/index.html
@@ -174,10 +174,16 @@
                 </div>
             </div>
 
-            <div class="mt-6 text-center">
-                <button onclick="shareLink()" class="inline-flex items-center justify-center gap-2 px-6 py-3 bg-white border border-rose-200 rounded-full shadow-sm text-slate-600 font-bold hover:bg-rose-50 transition-all text-sm group">
+<div class="mt-6 flex flex-col md:flex-row items-center justify-center gap-3 w-full px-4">
+                
+                <button onclick="shareLink()" class="w-full md:w-auto inline-flex items-center justify-center gap-2 px-6 py-3 bg-white border border-slate-200 rounded-full shadow-sm text-slate-600 font-bold hover:bg-slate-50 transition-all text-sm group">
                     <i class="fas fa-share-alt group-hover:text-rose-500 transition-colors"></i> 연인에게 결과 공유하기
                 </button>
+
+                <a href="https://link.coupang.com/a/ddddJ5" target="_blank" class="w-full md:w-auto inline-flex items-center justify-center gap-2 px-6 py-3 bg-gradient-to-r from-yellow-400 to-orange-500 border border-orange-400 rounded-full shadow-sm text-white font-bold hover:opacity-90 transition-all text-sm animate-bounce">
+                    <i class="fas fa-shopping-cart"></i> 아 맞다 나 쿠팡에 살거있다!
+                </a>
+
             </div>
             
             <div class="mt-8 flex justify-center w-full overflow-hidden">
